refactoring WalkingIterator + create prototype EventHandlersManagerWithHierarchy